Enable staged simple training pipeline
